fix api response, config testing
